--- a/project_technologies.json
+++ b/project_technologies.json
@@ -1,16 +1,18 @@
 {
     "technologies": {
         "apis": [
-            "insert apis"
+            "Web Speech",
+            "Google Plus"
         ],
-        "platforms": [
-            "insert platforms"
-        ],
+        
         "toolkits": [
-            "insert toolkits"
+            "Node.js",
+            "Three.js",
+            "Javascript",
+            "Webgl"
         ]
     },
     "themes": [
-        "insert themes"
+        "Dreams"
     ]
 }
