--- a/project_technologies.json
+++ b/project_technologies.json
@@ -14,9 +14,9 @@
         ]
     },
     "themes": [
-        "Dreams"
-        "Brain-Computer Visualization"
-         "Crowdsourcing"
+        "Dreams",
+        "Brain-Computer Visualization",
+         "Crowdsourcing",
          "Nueroscience"
          
     ]
