--- a/project_technologies.json
+++ b/project_technologies.json
@@ -18,6 +18,7 @@
         "Brain-Computer Visualization",
          "Crowdsourcing",
          "Nueroscience"
+         "Storytelling"
          
     ]
 }
