updated Architecture created future vision post

--- a/project_technologies.json
+++ b/project_technologies.json
@@ -2,11 +2,10 @@
     "technologies": {
         "apis": [
             "Oauth 2.0",
-            "Google Plus"
+            "Google Plus API"
         ],
          "platforms": [
             "MacOs",
-            "Linux",
             "Windows"
         ],
         "toolkits": [
