--- a/project_technologies.json
+++ b/project_technologies.json
@@ -8,7 +8,7 @@
             "WebGL",
             "Html5",
             "MacOs",
-            "Windows",
+            "Pure Data",
             "Google Chrome",
             "css"
         ],
